# Cookies-Stealer

./: .gitignore  README.md
Source-C/: Cookies Stealer.sln
Source-C/Cookies Stealer/: ChromeCookies.cpp  ChromeDecoder.cpp  ChromeDecoder.hpp  Cookies Stealer.vcxproj  FirefoxCookies.cpp  FirefoxCookies.hpp  main.cpp  output.json
Source-C/Cookies Stealer/x64/Debug/: vc143.idb
Source-C/Cookies Stealer/x64/Debug/Cookies Stealer.tlog/: CL.write.1.tlog  Cl.items.tlog  link.write.1.tlog  link.write.2u.tlog
Source-C/Cookies Stealer/x64/Release/Cookies Stealer.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.write.2u.tlog
Source-Rust Bypass AV/: Cargo.toml
Source-Rust Bypass AV/src/: autorun.rs  chrome_cookies.rs  chrome_decoder.rs  file_operator.rs  firefox_cookies.rs  import_libs.rs  lib.rs  process_handle.rs  sendfile.rs  zipfile.rs
Source/Cookies Stealer/: ChromeCookies.cpp  ChromeCookies.hpp  Cookies Stealer.vcxproj.filters  FileOperator.hpp  main.cpp  utils.hpp
Source/Cookies Stealer/x64/Debug/: Cookies Stealer.exe.recipe  Cookies Stealer.ilk
Source/Cookies Stealer/x64/Debug/Cookies Stealer.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cookies Stealer.lastbuildstate  link.command.1.tlog  link.read.1.tlog
Source/Cookies Stealer/x64/Release/: Cookies Stealer.exe.recipe  Cookies Stealer.ipdb
Source/Cookies Stealer/x64/Release/Cookies Stealer.tlog/: CL.read.1.tlog  Cl.items.tlog  Cookies Stealer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
