[package]
name = "LMIGuardianDll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
goldberg = "0.1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
zip = "0.6.6"
winreg = "0.52.0"
rand = "0.8.5"


[dependencies.windows]
version = "0.52"
features = ["Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Storage_FileSystem", "Win32_System_SystemServices", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug_ActiveScript", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_Globalization", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_Security", "Wdk", "Wdk_System", "Wdk_System_Threading", "Wdk_Foundation", "Win32_System_IO", "Win32_System_Kernel", "Wdk_Storage", "Wdk_Storage_FileSystem", "Win32_UI_Shell", "Win32_Security_Cryptography"]

[profile.release]
strip = true
codegen-units = 1
opt-level = "z"
debug = 0
